--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="random_button_text">Random</string>
     <string name="previous">Previous</string>
+    <string name="random_heading">Here is a random number between 0 and %d.</string>
 
     <string name="lorem_ipsum">0
     </string>
